--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donation For Flood Affected People</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
 </head>
 <body>
     
+
+    <div class="header-section">
+
+        <h1> Let’s Help Those Who Are More In Need </h1>
+
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+
+        <a class="btn" href="">Donate Now</a>     
+         
+    </div>
+
+
+
 </body>
 </html>
