--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     
-
     <div class="header-section">
 
         <h1> Let’s Help Those Who Are More In Need </h1>
@@ -26,6 +25,48 @@
          
     </div>
 
+
+    <div class="donate-today">
+
+        <h1>Donate Today</h1>
+
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+
+    </div>
+
+    <section class="flex-container">
+
+        <div class="row">
+          <span class="flex-item">100tk</span>
+        </div>
+
+        <div class="row">
+          <span class="flex-item dif">200tk</span>
+        </div>
+
+        <div class="row">
+          <span class="flex-item">500tk</span>
+        </div>
+
+        <div class="row">
+          <span class="flex-item">1000tk</span>
+        </div>
+
+        <div class="row">
+            <span class="flex-item">5000tk</span>
+          </div>
+
+        </section>
+
+        <div class="custom-amount">
+
+            <form>
+                <input type="number" placeholder=" Custom Amount (BDT)">
+              </form>
+              <hr width="50%">
+
+        </div>
 
 
 </body>
