--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
             <form>
                 <input type="number" placeholder=" Custom Amount (BDT)">
               </form>
-              <hr width="50%">
+
+              <hr >
+
+              <a class="btn" href="">Donate Now</a>
 
         </div>
+
+        
 
 
 </body>
