--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     
@@ -124,6 +129,12 @@
             </div>	 
           </div>
         
-
 </body>
+
+  <footer>
+    <h1>Be Humble</h1>
+    <p>I'm gona do it</p>
+  </footer>
+
+
 </html>
